Closed Bug 518585 Opened 15 years ago Closed 15 years ago

Fix the cairo Qt backend to build once again.

Categories

(Core Graveyard :: Widget: Qt, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.9.3a1

People

(Reporter: tobias.hunger, Assigned: tobias.hunger)

References

Details

Attachments

(1 file)

The cairo Qt backend is broken once again. The attached patch fixes the build issues.
Attachment #402590 - Flags: review+
Attachment #402590 - Flags: review+
Attachment #402590 - Flags: superreview+
Attachment #402590 - Flags: review+
Keywords: checkin-needed
Assignee: nobody → tobias.hunger
http://hg.mozilla.org/mozilla-central/rev/a41abf256130
Status: NEW → RESOLVED
Closed: 15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a1
InitDisplayCaps ought to have some code in it, though, to match the other code removed in http://hg.mozilla.org/mozilla-central/rev/6d1c8ac530ad .  (And once bug 518378 lands, it should call gfxQtPlatform::GetPlatformDPI.)  See bug 518378 comment 15.
I am removing InitDisplayCaps when I land bug 518378. Currently, the Qt values are hard coded to 96 and this is implemented in gfxPlatform::InitDisplayCaps
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: