Bug 518585 - Fix the cairo Qt backend to build. r=pavlov