gfx/thebes/src/gfxQtPlatform.cpp
@@ -363,6 +363,9 @@ gfxQtPlatform::GetFTLibrary()
     return gPlatformFTLibrary;
 }
 
+void gfxQtPlatform::InitDisplayCaps()
+{ }
+
 FontFamily *
 gfxQtPlatform::FindFontFamily(const nsAString& aName)
 {
